fix transistor internal coloring